# final-capstone-project-agentic-ai-ai_placement_guide

./: .gitignore  README.md  package-lock.json  package.json  render.yaml
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/agents/job_matching/: agent.py  jobs_data.json  matcher.py  scoring.py
backend/app/agents/resume_analyzer/: agent.py
backend/app/agents/roadmap/: agent.py
backend/app/agents/skill_gap/: agent.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  jobs.py  pipeline.py  resume.py  roadmap.py  skill_gap.py  students.py
backend/app/core/: config.py  embedder.py  security.py
backend/app/db/: session.py
backend/app/models/: models.py
backend/app/repositories/: job_repo.py  resume_repo.py  user_repo.py
backend/app/schemas/: schemas.py
backend/app/services/: features.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py
database/: seed.py
docs/: ARCHITECTURE.md  SETUP.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(dashboard)/analysis/: page.tsx
frontend/src/app/(dashboard)/dashboard/: page.tsx
frontend/src/app/(dashboard)/history/: page.tsx
frontend/src/app/(dashboard)/jobs/: page.tsx
frontend/src/components/: AnalysisCharts.tsx  DashboardCharts.tsx
frontend/src/lib/: api.ts  store.ts
shared/: utils.py
(+3 files in other folders)
