[project]
name = "placement-ai-backend"
version = "1.0.0"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "motor>=3.5.0",
    "pymongo>=4.8.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "pydantic[email]>=2.9.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "python-multipart>=0.0.12",
    "pymupdf>=1.25.0",
    "python-docx>=1.1.2",
    "spacy>=3.8.0",
    "sentence-transformers>=3.1.1",
    "transformers>=4.38.0,<5.0.0",
    "scikit-learn>=1.5.2",
    "groq>=0.11.0",
    "numpy>=2.0.0",
    "aiofiles>=24.1.0",
    "pandas>=2.0.0",
    "torch>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
